 - Map editors can now specify a direction for giant rats and bats to move in
   to allow greater precision in level design.
 - To make room for symbols that specify the direction for rats and bats to be
   moving in, the in-game "floating letters" messages have been deprecated.
   The code to produce them still exists in-game but has been commented out of
   the level creation code.

VERSION 1.002:

 - One of the doors in level 6 now opens diagonally in order to preserve the
   original challenge of the level.
 - Finishing the last level no longer raises a SystemExit; no further
   revisions to the code should use a SystemExit for anything other than a
   bug kill.
 - Ending the mainloop now displays a "quit message" (with the exception of
   end-of-games caused by a SystemExit).
 - New "bat" enemy added.
 - Game's default display size has been changed to 960x540
 - The game now has a new in-game message system, making the physical letters
   that used to float around the levels obsolete
 - New training levels to smooth the learning curve for new players
 - The "You are dead" message now displays in-game rather than in the terminal

Changes between Orange Guy's Quest version 1.0 and 1.1:

 - WINDOWS option added to allow users to define whether they want to use a
   backslash for their system.
 - Image sprites are now loaded into memory rather than being loaded once for
   every single time they are needed.
 - Image sprites are not loaded if they are not needed (user chooses the
   'Ancient' graphics setting)
 - The game no longer attempts to randomize enemy sprites, as they were not
   randomized in the final version of 1.0 and they are not randomized now.
 - The game no longer ends with an Index Exception.
 - Removed some of the attrocious final levels.
 - The location of the secret exit can no longer be discovered by observing
   where the player's sprite is clipped by it.
 - The game now has a semi-proper ending involving finding a sword.