@@ -1,6 +1,6 @@
  WWWWWWWW WWWWWWWWWWWWD
 W        W           WWWWWWWWW
-WP.............      >
+WP.......w.....      >
 W$WWWWWWWWWWWW.      <
 W   "Level Message"         ^.
 WWWWWWWWWWWWWW.  .
